AutoPilot Release Notes

Previously unpublished release...


Version 1.1-900 vom 05.02.2026

 -Deutsch
    - Update Bootstrap Framework auf 5.3.8
    - Update Bootstrap JavaScript auf 5.3.8
    - Update Bootsrap Icons auf 1.13.1
    - Update jQuery auf 4.0.0
    - Die Unterstützung für Basic Backup Skripte wurde eingestellt

 - English
    - Update Bootstrap Framework to 5.3.8
    - Update Bootstrap JavaScript to 5.3.8
    - Update Bootsrap Icons to 1.13.1
    - Update jQuery to 4.0.0
    - Support for Basic Backup scripts has been discontinued


Version 1.1-800 vom 04.11.2024

 - Deutsch
    - Die Anzeige des freigegebenen Ordnernamens (usbshare1, usbshare2 etc.) eines externen Datenträgers wurde angepasst.
    - Die Befehlsreihenfolge beim Aushängen eines externen Datenträgers wurde geändert.
    - Nach der Ausführung einer Hyper-Backup-Aufgabe wurde die Prozess-ID der zugehörigen Bereinigung falsch ermittelt. Infolgedessen endete das AutoPilot-Protokoll nach der Meldung, Bereinigung läuft. Der Fehler wurde behoben.

 - English
    - The display of the shared folder name (usbshare1, usbshare2 etc.) of an external disk has been adjusted.
    - The Command sequence changed when unmounting an external disk has been changed.
    - After executing a hyper backup task, the process ID of the associated cleanup was incorrectly determined. As a result, the AutoPilot log ended after the message, Cleanup is in progress. The error has been fixed.


Version 1.1-700 vom 05.04.2024

 - Deutsch
    - Es wurde ein neues Menü für -benutzerdefinierte Script Templates-, sowie ein erstes, einfaches Script-Template hinzugefügt.
    - Der Begriff -DiskStation- wurde in allen Texten durch den Begriff -Synology NAS- ausgetauscht. 

 - English
    - A new menu for -user-defined script templates- and a first, simple script template have been added.
    - The term -DiskStation- has been replaced by the term -Synology NAS- in all texts.


Version 1.1-600 vom 17.03.2024

 - Deutsch