@@ -3,7 +3,7 @@ package="AutoPilot"
 displayname="AutoPilot"
 displayname_enu="AutoPilot"
 displayname_ger="AutoPilot"
-version="1.1-800"
+version="1.1-900"
 firmware="7.0-40000"
 os_min_ver="7.0-40000"
 support_center="no"
